# micelio

./: .dockerignore  .gitignore  .hifignore  .micignore  AGENTS.md  Dockerfile  NEXT.md  PLAN.md  README.md  fnox.toml  mise.toml  mix.exs  session.md
.mise/tasks/: check  dev  precommit  setup  test
app/: AGENTS.md  mix.exs
app/config/: config.exs  runtime.exs  test.exs
app/lib/: micelio_web.ex
assets/css/: app.css
assets/js/: app.js
config/: config.exs  deploy.yml  dev.exs  runtime.exs  test.exs
config/alloy/: config.alloy
config/discourse/: install-ssl
config/loki/: config.yaml
config/prometheus/: prometheus.yml
config/tempo/: config.yaml
docs/: README.md  refactoring-plan.md
docs/adr/: README.md
docs/plans/: 2026-01-29-cli-output-design.md  2026-01-29-cli-output-implementation.md  2026-01-29-fix-mic-land-micelio-dev-plan.md  2026-02-19-feat-prompt-requests-status-filter-plan.md
docs/users/: hif-workflows.md  mic-workflows.md
hif/: AGENTS.md  Cargo.toml  build.rs
hif/src/: cache.rs  cdn.rs  cli.rs  config.rs  constants.rs  diagnostics.rs  error.rs  http_client.rs  main.rs  mountfs.rs  output.rs
hif/src/commands/: activate.rs  auth.rs  blame.rs  checkout.rs  debug.rs  diff.rs  grep.rs  land.rs  link.rs  log.rs  mod.rs  mount.rs  org.rs  project.rs  repository.rs  session.rs  show.rs  skill.rs  status.rs  sync.rs  tree.rs  ui_test_support.rs  unmount.rs  watch.rs
hif/src/core/: bloom.rs  hash.rs  hlc.rs  mod.rs  tree.rs
hif/src/grpc/: client.rs  hif_v1.rs  mod.rs  proto.rs  retry.rs
hif/src/workspace/: changes.rs  manifest.rs  mod.rs  session.rs  watch.rs
hif/tests/: integration.rs
lib/micelio/: accounts.ex  activity.ex  admin.ex  ai_tokens.ex  application.ex  cli_reference.ex  contribution_confidence.ex  docs.ex  fediverse.ex  forges.ex  notifications.ex  plans.ex  prom_ex.ex  prompt_requests.ex  remote_execution.ex  repositories.ex  reputation.ex  sessions.ex  storage.ex  validation_environments.ex  webhooks.ex
lib/micelio_web/: api_spec.ex  docs_i18n.ex  endpoint.ex  live_auth.ex  markdown.ex  open_graph_image.ex  router.ex  schema_org.ex
mic/: Cargo.toml
mic/src/: cache.rs  cdn.rs  cli.rs  config.rs  constants.rs  error.rs  http_client.rs  main.rs
mic/src/commands/: auth.rs  blame.rs  checkout.rs  diff.rs  land.rs  link.rs  log.rs  mod.rs  mount.rs  org.rs  project.rs  session.rs  show.rs  status.rs  sync.rs  tree.rs  unmount.rs
mic/src/core/: bloom.rs  hash.rs  mod.rs  tree.rs
mic/src/grpc/: client.rs  endpoint.rs  mod.rs  proto.rs  retry.rs
mic/src/workspace/: changes.rs  manifest.rs  mod.rs  session.rs
mic/tests/: integration.rs
mise/utilities/: dev_instance_env.sh
mobile/: .gitignore  App.tsx  app.json  package.json
mobile/src/: api.ts
priv/: cli-reference.json
priv/gettext/: default.pot
priv/protos/: micelio_sessions.proto
priv/repo/: seeds.exs
priv/static/: skill.md
test/: test_helper.exs
todos/: 001-complete-p1-protocol-freeze.md
(+618 files in other folders)
