[package]
name = "hif"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "The hif CLI - a forge-first version control system for the agent era"
license = "MIT"
repository = "https://github.com/pepicrft/micelio"
keywords = ["cli", "vcs", "forge", "version-control"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hif"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "color"] }
clap_usage = "2.0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/gRPC
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toon-format = "0.4"

# Cryptography
blake3 = "1"
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
directories = "6"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
rand = "0.9"
url = "2"
urlencoding = "2"
colored = "3"
hostname = "0.4"
regex = "1"
fs2 = "0.4"
bytes = "1"
futures-util = "0.3"
dav-server = "0.7"
sha2 = "0.10"
notify = "8"
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
